style.css
* {
  margin: 0;
  padding: 0;
}

#game {
  margin: 0 20vw;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

footer {
  text-align: center;
}

.welcome {
  display: flex;
  justify-content: center;
  align-items: center;
}

.create-your-own {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
}

.guess {
  display: flex;
  padding: 2vh 0;
  align-items: center;
  justify-content: center;
}

#canvas {
  display: flex;
  padding: 2vh 0;
  justify-content: center;
  align-items: center;
}


.modal {
  position: fixed;
  width: 100vw;
  height: 100vh;
  opacity: 0;
  visibility: hidden;
  transition: all 0.3s ease;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal.open {
  visibility: visible;
  opacity: 1;
  transition-delay: 0s;

}

.modal-bg {
  position: absolute;
  width: 100%;
  height: 100%;
}
.modal-container {
  border-radius: 10px;
  border-style: dotted;
  background: #fff;
  position: relative;
  padding: 30px;
}
.modal-close {
  position: absolute;
  right: 15px;
  top: 15px;
  outline: none;
  appearance: none;
  color: red;
  background: none;
  border: 0px;
  font-weight: bold;
  cursor: pointer;
}

.blur {
  filter: blur(10px);
}

